src/snapshots/skip_lists__range_mapped__test__insert_at_leaves.snap
---
source: src/range_mapped.rs
expression: list.output_dot()
---
digraph {
  node [shape=plaintext];
  rankdir="TB";
  ranksep="0.02";
  splines=polyline;

n0 [group="h0",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR>
      <TD>0</TD>
      <TD>1</TD>
      <TD>3</TD>
      <TD>7</TD>
    </TR>
    <TR>
      <TD>6</TD>
      <TD>1</TD>
      <TD>13</TD>
      <TD>71</TD>
    </TR>
  </TABLE>
>]

}

