src/snapshots/skip_lists__range_mapped__test__old_roots_get_deduped.snap
---
source: src/range_mapped.rs
expression: list.output_dot()
---
digraph {
  node [shape=plaintext];
  rankdir="TB";
  ranksep="0.02";
  splines=polyline;

n10 [group="h0",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD> ∅ </TD></TR>
  </TABLE>
>]

n9 [group="h1",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">-∞</TD>
          <TD>0</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n8 [group="h2",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">-∞</TD>
          <TD>0</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n7 [group="h3",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">-∞</TD>
          <TD>0</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n6 [group="h4",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">-∞</TD>
          <TD>0</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n15 [group="h0",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR>
      <TD>0</TD>
    </TR>
    <TR>
      <TD>1107296256</TD>
    </TR>
  </TABLE>
>]

n14 [group="h1",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">0</TD>
          <TD>5632</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n13 [group="h2",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">0</TD>
          <TD>5632</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n12 [group="h3",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">0</TD>
          <TD>5632</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n11 [group="h4",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">0</TD>
          <TD>5632</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n5 [group="h5",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">-∞</TD>
          <TD PORT="p1">0</TD>
          <TD>5632</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n4 [group="h6",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">-∞</TD>
          <TD>5632</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n22 [group="h0",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR>
      <TD>5632</TD>
    </TR>
    <TR>
      <TD>4294508593</TD>
    </TR>
  </TABLE>
>]

n21 [group="h1",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">5632</TD>
          <TD>1111638594</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n20 [group="h2",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">5632</TD>
          <TD>1111638594</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n19 [group="h3",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">5632</TD>
          <TD>1111638594</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n18 [group="h4",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">5632</TD>
          <TD>1111638594</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n17 [group="h5",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">5632</TD>
          <TD>1111638594</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n16 [group="h6",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">5632</TD>
          <TD>1111638594</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n3 [group="h7",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">-∞</TD>
          <TD PORT="p1">5632</TD>
          <TD>1111638594</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n2 [group="h8",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">-∞</TD>
          <TD>1111638594</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n1 [group="h9",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">-∞</TD>
          <TD>1111638594</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n32 [group="h0",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR>
      <TD>1111638594</TD>
      <TD>2122219134</TD>
    </TR>
    <TR>
      <TD>52</TD>
      <TD>16962</TD>
    </TR>
  </TABLE>
>]

n31 [group="h1",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">1111638594</TD>
          <TD>∞</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n30 [group="h2",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">1111638594</TD>
          <TD>∞</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n29 [group="h3",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">1111638594</TD>
          <TD>∞</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n28 [group="h4",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">1111638594</TD>
          <TD>∞</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n27 [group="h5",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">1111638594</TD>
          <TD>∞</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n26 [group="h6",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">1111638594</TD>
          <TD>∞</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n25 [group="h7",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">1111638594</TD>
          <TD>∞</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n24 [group="h8",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">1111638594</TD>
          <TD>∞</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n23 [group="h9",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">1111638594</TD>
          <TD>∞</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n0 [group="h10",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">-∞</TD>
          <TD PORT="p1">1111638594</TD>
          <TD>∞</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

  n9:p0:s -> n10:n [weight=0.01]
  n8:p0:s -> n9:n [weight=0.01]
  n7:p0:s -> n8:n [weight=0.01]
  n6:p0:s -> n7:n [weight=0.01]
  n14:p0:s -> n15:n [weight=0.01]
  n13:p0:s -> n14:n [weight=0.01]
  n12:p0:s -> n13:n [weight=0.01]
  n11:p0:s -> n12:n [weight=0.01]
  n5:p0:s -> n6:n [weight=0.01]
  n5:p1:s -> n11:n [weight=0.01]
  n4:p0:s -> n5:n [weight=0.01]
  n21:p0:s -> n22:n [weight=0.01]
  n20:p0:s -> n21:n [weight=0.01]
  n19:p0:s -> n20:n [weight=0.01]
  n18:p0:s -> n19:n [weight=0.01]
  n17:p0:s -> n18:n [weight=0.01]
  n16:p0:s -> n17:n [weight=0.01]
  n3:p0:s -> n4:n [weight=0.01]
  n3:p1:s -> n16:n [weight=0.01]
  n2:p0:s -> n3:n [weight=0.01]
  n1:p0:s -> n2:n [weight=0.01]
  n31:p0:s -> n32:n [weight=0.01]
  n30:p0:s -> n31:n [weight=0.01]
  n29:p0:s -> n30:n [weight=0.01]
  n28:p0:s -> n29:n [weight=0.01]
  n27:p0:s -> n28:n [weight=0.01]
  n26:p0:s -> n27:n [weight=0.01]
  n25:p0:s -> n26:n [weight=0.01]
  n24:p0:s -> n25:n [weight=0.01]
  n23:p0:s -> n24:n [weight=0.01]
  n0:p0:s -> n1:n [weight=0.01]
  n0:p1:s -> n23:n [weight=0.01]
}

