src/snapshots/skip_lists__range_mapped__test__only_add_neginf_to_first_logical_node.snap
---
source: src/range_mapped.rs
expression: list.output_dot()
---
digraph {
  node [shape=plaintext];
  rankdir="TB";
  ranksep="0.02";
  splines=polyline;

n2 [group="h3",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
      Insert(0, 0, 5) Insert(1094795585, 4276545, 1) Insert(3419130156, 559546571, 5)    </TD></TR>
    <TR><TD>
    </TD></TR>
  </TABLE>
>]

n1 [group="h4",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">-∞</TD>
          <TD>0</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n5 [group="h2",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
      Insert(0, 1515847680, 5) Insert(4, 0, 0) Insert(1094795585, 4276545, 1)    </TD></TR>
    <TR><TD>
    </TD></TR>
  </TABLE>
>]

n4 [group="h3",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">0</TD>
          <TD>3419130156</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n3 [group="h4",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">0</TD>
          <TD>3419130156</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n6 [group="h4",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">3419130156</TD>
          <TD>∞</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n0 [group="h5",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">-∞</TD>
          <TD PORT="p1">0</TD>
          <TD PORT="p2">3419130156</TD>
          <TD>∞</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

  n1:p0:s -> n2:n [weight=0.01]
  n4:p0:s -> n5:n [weight=0.01]
  n3:p0:s -> n4:n [weight=0.01]
  n6:p0:s -> n2:n [weight=0.01]
  n0:p0:s -> n1:n [weight=0.01]
  n0:p1:s -> n3:n [weight=0.01]
  n0:p2:s -> n6:n [weight=0.01]
}

